--- a/style.css
+++ b/style.css
@@ -4,25 +4,27 @@ body {
   color: #333;
   font-family: "Lato", sans-serif;
 }
-.aaa {
+.addition-info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.addition-info 
+.addition-info__img {
   width: 100%;
 }
-.aaa .more_inf {
+.addition-info 
+.addition-info__link {
   font-family: "Fantasy", cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa { 
+  .addition-info { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
