--- a/style.css
+++ b/style.css
@@ -29,12 +29,16 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
+.add-task-section {
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-task-form {
   display: flex;
 }
 ul {
@@ -62,8 +66,7 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -89,7 +92,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-task-title {
   display: block;
   margin: 0 0 20px;
 }
